--- a/CombinePDF.csproj
+++ b/CombinePDF.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="BouncyCastle" Version="1.8.9" />
     <PackageReference Include="itext" Version="8.0.5" />
     <PackageReference Include="itext.bouncy-castle-adapter" Version="8.0.5" />
+    <PackageReference Include="itext7" Version="8.0.5" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.5" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
