Successfully combining pdf files into one from a directory.

--- a/CombinePDF.csproj
+++ b/CombinePDF.csproj
@@ -16,4 +16,26 @@
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SamplePDFFiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Output\README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SamplePDFFiles\01-First PDF File.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SamplePDFFiles\02-second.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SamplePDFFiles\03-3rd PDF File.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SamplePDFFiles\04.pdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
